@@ -1,5 +1,6 @@
 3dt 0.5.0:
 
+2008-11-17: The user can now specify a vector to point upward on the screen.
 2008-11-13: Tilings carrying nets in RCSR or the zeolite atlas are identified.
 2008-11-13: The space group lookup table is automatically loaded at startup.
 2008-11-13: Added a third light and a dialog for setting light properties.
